sort.basic.bubble.AlgBubbleSort2.scala.code
var nbValeurs=0
var fin = 0
var test = false
nbValeurs=getNombreValeurs()

def bubbleSort2()  {
  do {
      fin = 0 
      for (i <- 1 to nbValeurs-1){
            test = plusPetit(i-1,i)
            if(!test){
               echange(i-1,i)
               test = false
               fin = fin +1
             
               
            }
      }
      nbValeurs = nbValeurs -1
  } while (fin != 0) 
}
}